--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Reserva de Salas</title>
-  <link rel="stylesheet" href="../src/assets/css/styles.css"> 
+  <link rel="stylesheet" href=""> 
 </head>
   <body class="bg-zinc-100 text-zinc-900">
     <div id="root"></div> 
