--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Reserva de Salas</title>
-  <link rel="stylesheet" href=""> 
+  <link rel="stylesheet" href='./assets/css/tailwind.css'> 
+  <link rel="icon" href="/favicon.ico" />
 </head>
   <body class="bg-zinc-100 text-zinc-900">
     <div id="root"></div> 
