--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 </head>
   <body class="bg-zinc-100 text-zinc-900">
     <div id="root"></div> 
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
