--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Reserva de Salas</title>
+  <base href="/" />
   <link rel="stylesheet" href='./assets/css/tailwind.css'> 
   <link rel="icon" href="/favicon.ico" />
 </head>
