--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Sistema de Reserva de Salas</title>
   <base href="/" />
   <link rel="stylesheet" href='./assets/css/tailwind.css'> 
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type='image/png' href="/favicon.ico" />
 </head>
   <body class="bg-zinc-100 text-zinc-900">
     <div id="root"></div> 
